--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <title>Batatabit</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        
+    </header>
     <main>
         <section></section>
         <section></section>
         <section></section>
         <section></section>
     </main>
-    <footer></footer>
+    <footer>
+
+    </footer>
 </body>
 </html>
