--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <title>Batatabit</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <!--Fuentes-->
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" 
+    rel="stylesheet">
     <!--Estilos-->
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
-        <img src="" alt="">
-        <div>
+        <img src="./assets/img/logo.svg" alt=""/>
+        <div class="header--title-container">
             <h1>
                 La proxima revolucion en el intercambio de
                 criptomonedas.
@@ -22,7 +23,7 @@
                 Batatabit te ayuda a navegar entre los diferentes
                 precios y tendencias.
             </p>
-            <a href="">Conoce nuestros planes <span>i</span></a>
+            <a href="" class="header--button">Conoce nuestros planes <span>i</span></a>
         </div>
     </header>
     <main>
