--- a/index.html
+++ b/index.html
@@ -23,11 +23,56 @@
                 Batatabit te ayuda a navegar entre los diferentes
                 precios y tendencias.
             </p>
-            <a href="" class="header--button">Conoce nuestros planes <span>i</span></a>
+            <a href="" class="header--button">Conoce nuestros planes <span></span></a>
         </div>
     </header>
     <main>
-        <section></section>
+        <section class="main--exchange-container">
+            <div class="backgroundImg"></div>
+
+            <div class="main--exchange-container-title">
+                <h2>Visibilizamos todas las tasas de cambio.</h2>
+                <p>
+                    Traemos informacion en tiempo real de las casas 
+                    de cambio y las monedas mas importantes del mundo
+                </p>
+            </div>
+
+            <section class="main-tables-container">
+            <!--TR hace referencia a los rows (filas)-->
+            <!--TD hace referencia a la informacion-->
+                <div class="main-currency-table">
+                    <p class="currency-table--title">Monedas</p>
+                    <div class="currency-table--container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left">Bitcoin</td>
+                                <td class="table__top-right table__right">
+                                    $1.96 <span></span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Ethereum</td>
+                                <td class="table__right">$0.07</td>
+                            </tr>
+                            <tr>
+                                <td>Ripple</td>
+                                <td class="table__right">$2.15</td>
+                            </tr>
+                            <tr>
+                                <td class="table__bottom-left">Stellar</td>
+                                <td class="table__right table__right">$4.96</td>
+                            </tr>
+                        </table>
+                    </div>
+                    
+                    <div class="currency-table--date">
+                        <p><b>Actualizado: 19 Febrero 2021 23:45</b></p>
+                    </div>
+                </div>
+            </section>
+        </section>
+
         <section></section>
         <section></section>
         <section></section>
