--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     de cambio y las monedas mas importantes del mundo
                 </p>
             </div>
-
+            <!--Seccion de monedas-->
             <section class="main-tables-container">
             <!--TR hace referencia a los rows (filas)-->
             <!--TD hace referencia a la informacion-->
@@ -48,32 +48,67 @@
                             <tr>
                                 <td class="table__top-left">Bitcoin</td>
                                 <td class="table__top-right table__right">
-                                    $1.96 <span></span>
+                                    $1.96 <span class="down"></span>
                                 </td>
                             </tr>
                             <tr>
                                 <td>Ethereum</td>
-                                <td class="table__right">$0.07</td>
+                                <td class="table__right">
+                                    $0.07 <span class="up"></span>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Ripple</td>
-                                <td class="table__right">$2.15</td>
+                                <td class="table__right">
+                                    $2.15 <span class="down"></span>
+                                </td>
                             </tr>
                             <tr>
                                 <td class="table__bottom-left">Stellar</td>
-                                <td class="table__right table__right">$4.96</td>
+                                <td class="table__bottom-right table__right">
+                                    $4.96 <span class="down"></span>
+                                </td>
                             </tr>
                         </table>
+                        <a href="" class="right-button"><span></span></a>
                     </div>
                     
                     <div class="currency-table--date">
-                        <p><b>Actualizado: 19 Febrero 2021 23:45</b></p>
+                        <p><b>Actualizado:</b> 19 Febrero 23:45</p>
                     </div>
                 </div>
             </section>
         </section>
+        <!--Seccion de beneficios-->
+        <section class="main-product-detail">
+            <span></span>
+            <div>
+                <h2>
+                    Creamos un producto sin comparacion.
+                </h2>
+                <p>
+                    Confiable y dise;ado para su uso diario.
+                </p>
+            </div>
+            <section class="product-cards--container">
+                <!--Tiempo real-->
+                <article class="product-detail--card">
+                    <span class="clock"></span>
+                    <p class="product--card-title">
+                        Tiempo real
+                    </p>
+                    <p class="product--card-body">
+                        Nuestra API toma informacion minuto
+                        a minuto sobre las tasas que mas
+                        determinan el comportamiento
+                    </p>
+                </article>
+                <article></article>
+                <article></article>
+                <article></article>
+            </section>
+        </section>
 
-        <section></section>
         <section></section>
         <section></section>
     </main>
