--- a/index.html
+++ b/index.html
@@ -81,17 +81,17 @@
         </section>
         <!--Seccion de beneficios-->
         <section class="main-product-detail">
-            <span></span>
-            <div>
-                <h2>
-                    Creamos un producto sin comparacion.
-                </h2>
-                <p>
-                    Confiable y dise;ado para su uso diario.
-                </p>
+            <!--Logotipo de la papa-->
+            <span class="product-detail--batata-logo"></span>
+
+            <div class="main-product-detail--title">
+                <h2>Creamos un producto sin comparacion.</h2>
+                <p>Confiable y dise;ado para su uso diario.</p>
             </div>
+            <!--Secciones CARDS-->
             <section class="product-cards--container">
-                <!--Tiempo real-->
+
+                <!--Clock-->
                 <article class="product-detail--card">
                     <span class="clock"></span>
                     <p class="product--card-title">
@@ -100,12 +100,48 @@
                     <p class="product--card-body">
                         Nuestra API toma informacion minuto
                         a minuto sobre las tasas que mas
-                        determinan el comportamiento
+                        determinan el comportamiento.
                     </p>
                 </article>
-                <article></article>
-                <article></article>
-                <article></article>
+
+                <!--Eye-->
+                <article class="product-detail--card">
+                    <span class="eye"></span>
+                    <p class="product--card-title">
+                        No hay tareas escondidas
+                    </p>
+                    <p class="product--card-body">
+                        Ni en la compra o al momento de exit,
+                        Batatabit siempre te muestra el costo
+                        real de lo que estas adquiriendo.
+                    </p>
+                </article>
+
+                <!--Dollar-->
+                <article class="product-detail--card">
+                    <span class="dollar"></span>
+                    <p class="product--card-title">
+                        Compara monedas
+                    </p>
+                    <p class="product--card-body">
+                        No mas rumores, con Batatabit sabras
+                        el valor real de cada moneda en el
+                        mercado actual.
+                    </p>
+                </article>
+
+                <!--Check-->
+                <article class="product-detail--card">
+                    <span class="check"></span>
+                    <p class="product--card-title">
+                        Informacion confiable
+                    </p>
+                    <p class="product--card-body">
+                        Nuestras fuentes estan 100%
+                        verificadas y continuamos auditando
+                        su contenido mientras se actualizan.
+                    </p>
+                </article>
             </section>
         </section>
 
