--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     rel="stylesheet">
     <!--Estilos-->
     <link rel="stylesheet" href="./styles.css">
+    <!--Breackpoint para pantallas mayores a 930px-->
+    <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 930px)"/>
 </head>
 <body>
     <!--HEADER//////////////////////////////////////////////-->
@@ -273,7 +275,16 @@
         </section>
     </main>
     <footer>
-
+        <section class="left">
+            <ul>
+                <li><a href="#">Linkedin</a></li>
+                <li><a href="#">Crunchbase</a></li>
+                <li><a href="#">Hackernews</a></li>
+            </ul>
+        </section>
+        <section class="right">
+            <img src="./assets/img/logo-footer.svg" alt="Logo de Batatabit 2021">
+        </section>
     </footer>
 </body>
 </html>
