Cambio de assets locales por assets en drive

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 <body>
     <!--HEADER//////////////////////////////////////////////-->
     <header>
-        <img src="./assets/img/logo.svg" alt=""/>
+        <!--
+            Reemplazando assets locales por unos en nube
+            <img src="./assets/img/logo.svg" alt=""/>
+        -->
+        <img src="http://drive.google.com/uc?export=view&id=1RWvgkLJWxSwy41ymKHV1Aclb5pRoNXEA" alt=""/>
         <div class="header--title-container">
             <h1>
                 La proxima revolucion en el intercambio de
@@ -283,7 +287,11 @@
             </ul>
         </section>
         <section class="right">
-            <img src="./assets/img/logo-footer.svg" alt="Logo de Batatabit 2021">
+            <img src="http://drive.google.com/uc?export=view&id=1lrd3nTW7mmfJLunC4ft2qG0Y6LzTvWgn" alt="Logo de Batatabit 2021">
+            <!--
+                Reemplazo de asset local por drive
+                <img src="./assets/img/logo-footer.svg" alt="Logo de Batatabit 2021">
+            -->
         </section>
     </footer>
 </body>
